--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "boba_run",
   "version": "1.0.0",
   "description": "web.lab website",
-  "main": "map.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
